[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cdft_solver"
version = "0.1.1"
description = "A package for classical density functional and integral equation theory based calculation."
authors = [{name = "vikkivarma16", email = "vikkivarma16@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib"
]

[tool.setuptools.packages.find]
where = ["."]

